z indexes of resize element and move element corrected. Also z indexes of all popping windows corrected, so they should always stack in correct order. Also move task window from calendar improved, so it is more visible. Shutter with shadow added

--- a/src/app/common/user-message/user-message.component.css
+++ b/src/app/common/user-message/user-message.component.css
@@ -18,7 +18,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 1000;
+    z-index: 1100;
     background-color: rgba(255,255,255,0.5);
 }
 .message-window{
